change run command

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,6 @@ jobs:
         uses: koyeb/action-git-deploy@v1
         with:
           app-name: java-${{ github.ref_name }}
-          git-run-command: "./mvnw exec:java"
+          git-run-command: "java -jar target/example-java-1.0-SNAPSHOT.jar"
           service-ports: "8000:http"
           service-routes: "/:8000"
